--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <h1>
             <img class="logo" src="./assets/images/logo.png" alt="Print it ! Impressions d'entreprises">
         </h1>
-        <a class="btn devis" href="mailto:contact@print-it.tld">Devis</a>
+        <a id="devis2" class="btn devis" href="#">Devis</a>
     </header>
     <main>
         <div id="banner">
             <img src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
             <p>Impressions tous formats <span>en boutique et en ligne</span></p>
 
-            <img class="arrow_left arrow" src="assets/images/arrow_left.png" alt="">
+            <a id="btn68" class="arrow_left arrow"><img src="assets/images/arrow_left.png" alt=""></a>
             <img class="arrow_right arrow" src="assets/images/arrow_right.png" alt="">
 
             <div class="dots">
