--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
 
 <body>
     <header class="container">
-        <h1>
-            <img class="logo" src="./assets/images/logo.png" alt="Print it ! Impressions d'entreprises">
+        <img class="logo" src="./assets/images/logo.png" alt="Print it ! Impressions d'entreprises">
         </h1>
         <a id="devis2" class="btn devis" href="#">Devis</a>
     </header>
     <main>
         <div id="banner">
-            <img src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
+            <img class="bannerImg" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
             <p>Impressions tous formats <span>en boutique et en ligne</span></p>
 
-            <a id="btn68" class="arrow_left arrow"><img src="assets/images/arrow_left.png" alt=""></a>
-            <img class="arrow_right arrow" src="assets/images/arrow_right.png" alt="">
+            <img class="arrow_left arrow" src="assets/images/arrow_left.png" alt="">
+            <img id="btn68" class="arrow_right arrow" src="assets/images/arrow_right.png" alt="">
 
             <div class="dots">
                 <div class="dot dot_selected"></div>
