--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <main>
         <div id="banner">
             <img class="bannerImg" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-            <p>Impressions tous formats <span>en boutique et en ligne</span></p>
+            <p id="slidetext">Impressions tous formats <span>en boutique et en ligne</span></p>
 
-            <img class="arrow_left arrow" src="assets/images/arrow_left.png" alt="">
+            <img id="btn69" class="arrow_left arrow" src="assets/images/arrow_left.png" alt="">
             <img id="btn68" class="arrow_right arrow" src="assets/images/arrow_right.png" alt="">
 
             <div class="dots">
