--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img id="btn68" class="arrow_right arrow" src="assets/images/arrow_right.png" alt="">
 
             <div class="dots">
-                <div class="dot dot_selected"></div>
+                <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
